--- a/WheelManager/app/src/main/res/layout/activity_searchproduct.xml
+++ b/WheelManager/app/src/main/res/layout/activity_searchproduct.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SearchProduct">
+    tools:context=".ui.searchproductFragment.SearchProduct">
 
     <SearchView android:id="@+id/searchView"
         android:layout_width="match_parent"
