hot: Create layout ServiceFragment.kt in navigation.

--- a/WheelManager/app/src/main/res/menu/activity_main_drawer.xml
+++ b/WheelManager/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,8 +13,9 @@
             android:icon="@drawable/ic_menu_product"
             android:title="@string/menu_gallery" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_service"
+            android:icon="@drawable/ic_menu_service"
+            android:title="@string/menu_service"/>
+
     </group>
 </menu>
