--- a/WheelManager/app/src/main/res/navigation/mobile_navigatio.xml
+++ b/WheelManager/app/src/main/res/navigation/mobile_navigatio.xml
@@ -18,8 +18,9 @@
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="pe.edu.upc.wheelmanager.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_service"
+        android:name="pe.edu.upc.wheelmanager.ui.slideshow.ServiceFragment"
+        android:label="@string/menu_service"
+        tools:layout="@layout/fragment_service" />
+
 </navigation>
