hot: Create layout ServiceFragment.kt in navigation.

--- a/WheelManager/app/src/main/res/layout/fragment_service.xml
+++ b/WheelManager/app/src/main/res/layout/fragment_service.xml
@@ -4,19 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.slideshow.ServiceFragment">
+    tools:context=".ui.service.ServiceFragmentMain">
 
-    <TextView
-        android:id="@+id/text_slideshow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<com.google.android.material.textfield.TextInputLayout
+android:id="@+id/textInputLayout"
+android:layout_width="0dp"
+android:layout_height="wrap_content"
+app:layout_constraintEnd_toEndOf="parent"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintTop_toTopOf="parent">
+
+<com.google.android.material.textfield.TextInputEditText
+    android:id="@+id/etName"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/hint_name" />
+</com.google.android.material.textfield.TextInputLayout>
+
+<Button
+android:id="@+id/btAdd"
+android:layout_width="0dp"
+android:layout_height="wrap_content"
+android:text="@string/bt_add"
+app:layout_constraintEnd_toEndOf="parent"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+<androidx.recyclerview.widget.RecyclerView
+android:id="@+id/rvContacts"
+android:layout_width="0dp"
+android:layout_height="0dp"
+app:layout_constraintBottom_toBottomOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintTop_toBottomOf="@+id/btAdd" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
