--- a/WheelManager/app/src/main/res/navigation/mobile_navigatio.xml
+++ b/WheelManager/app/src/main/res/navigation/mobile_navigatio.xml
@@ -19,8 +19,8 @@
 
     <fragment
         android:id="@+id/nav_service"
-        android:name="pe.edu.upc.wheelmanager.ui.slideshow.ServiceFragment"
+        android:name="pe.edu.upc.wheelmanager.ui.service.ServiceFragmentMain"
         android:label="@string/menu_service"
-        tools:layout="@layout/fragment_service" />
+        tools:layout="@layout/fragment_serviceMain" />
 
 </navigation>
